bug with z-index of main popup menu and icons is fixed

--- a/css/common.css
+++ b/css/common.css
@@ -789,7 +789,7 @@ textarea {
   box-shadow: 0 1px 0 #f2f2f2;
   background: #fff;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 .is-404 .page__header {
   border-bottom: none;
