--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -111,7 +111,7 @@
 		@include box-shadow(0 1px 0 #f2f2f2)
 		background: #fff
 		position: relative
-		z-index: 1
+		z-index: 2
 
 		.is-404 &
 			border-bottom: none
@@ -383,6 +383,7 @@
 	visibility: hidden
 	+opacity(0)
 	z-index: 100
+
 
 	&.is-open
 		+opacity(1)
